Add user create endpoint
